# Shellfoundry-Traffic

./: .pre-commit-config.yaml  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  todo.txt
.github/workflows/: python-publish.yml  python-push.yml
shellfoundry/traffic/: test_helper.py
shellfoundry_traffic/: __main__.py  cloudshell_scripts_helpers.py  script_utils.py  shellfoundry_traffic.py  shellfoundry_traffic_cmd.py  test_helpers.py
tests/: shell-definition-2.yaml  test_shellfoundry_traffic.py  test_test_helpers.py
tests/script/: script-definition.yaml  test_shellfoundry_traffic_script.py
tests/script/src/: __main__.py  exclude.txt  main_1.py  main_2.py  requirements.txt  script.py
tests/shell/: deployment.xml  shell-definition-1.yaml  shell-definition-standard.yaml  test_shellfoundry_traffic_shell.py
tests/shell/TOSCA-Metadata/: TOSCA.meta.back
tests/shell/src/: data_model.py  drivermetadata.xml  requirements.txt
tests/src/: drivermetadata.xml  shellfoundry_test_driver.py
