[metadata]
name = shellfoundry-traffic
description = Extension to Quali shellfoundry package for TG shells development
url = https://github.com/QualiSystems/shellfoundry-traffic
author = Quali
author_email = info@qualisystems.com
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
classifiers =
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    PyYAML
    pytest
    cloudshell-logging==1.0.3
    cloudshell-orch-core>=3.3.0.0,<3.4.0.0
    cloudshell-shell-core>=5.0.3,<6.0.0
    cloudshell-rest-api>=8.2.3.1
    shellfoundry

[options.packages.find]
exclude =
    docs*
    tests*

[options.entry_points]
console_scripts =
    shellfoundry_traffic = shellfoundry_traffic.shellfoundry_traffic_cmd:main

[isort]
profile = black

[mypy]
ignore_missing_imports = True
exclude =
    shellfoundry_traffic/cloudshell_scripts_helpers.py
    tests/script/src/*
    tests/shell/src/*
allow_untyped_calls = True
allow_untyped_defs = False
allow_incomplete_defs = False
follow_imports = skip
no_strict_optional = True
show_error_codes = True
